--- a/payment.html
+++ b/payment.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYCXEBSLW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SZYCXEBSLW');
+</script>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CastleTrips - Payment</title>
@@ -129,3 +139,4 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
