--- a/places.html
+++ b/places.html
@@ -133,7 +133,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="places.html">Places</a>
-        <a href="payment.html">Book Now</a>
+        <a href="https://castle-trips.vercel.app/payment.html">Book Now</a>
       </nav>
     </header>
 
@@ -208,7 +208,7 @@
           The original Disney park filled with classic rides, parades, magical
           shows, and timeless Disney charm!
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -224,7 +224,7 @@
           The largest Disney destination with 4 theme parks, water parks,
           resorts, and spectacular entertainment.
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -240,7 +240,7 @@
           The fairy-tale European Disney wonder known for its romantic castles
           and magical adventures.
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -256,7 +256,7 @@
           Known worldwide for DisneySea, stunning visuals, and unique Japanese
           Disney culture.
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -272,7 +272,7 @@
           A charming and colorful Disney park offering immersive Asian-inspired
           magical experiences.
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -288,7 +288,7 @@
           Home to the world’s largest Disney castle and technologically advanced
           Disney attractions.
         </p>
-        <a href="payment.html"><button class="btn">Book Now</button></a>
+        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
       </div>
     </div>
 
@@ -304,4 +304,5 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
 
