--- a/places.html
+++ b/places.html
@@ -208,7 +208,10 @@
           The original Disney park filled with classic rides, parades, magical
           shows, and timeless Disney charm!
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">
+  Book Now
+</button>
+
       </div>
     </div>
 
@@ -224,7 +227,7 @@
           The largest Disney destination with 4 theme parks, water parks,
           resorts, and spectacular entertainment.
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">   Book Now </button>
       </div>
     </div>
 
@@ -240,7 +243,7 @@
           The fairy-tale European Disney wonder known for its romantic castles
           and magical adventures.
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">   Book Now </button>
       </div>
     </div>
 
@@ -256,7 +259,7 @@
           Known worldwide for DisneySea, stunning visuals, and unique Japanese
           Disney culture.
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">   Book Now </button>
       </div>
     </div>
 
@@ -272,7 +275,7 @@
           A charming and colorful Disney park offering immersive Asian-inspired
           magical experiences.
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">   Book Now </button>
       </div>
     </div>
 
@@ -288,7 +291,7 @@
           Home to the world’s largest Disney castle and technologically advanced
           Disney attractions.
         </p>
-        <a href="https://castle-trips.vercel.app/payment.html"><button class="btn">Book Now</button></a>
+       <button class="btn" onclick="window.location.href='https://castle-trips.vercel.app/payment.html'">   Book Now </button>
       </div>
     </div>
 
@@ -304,5 +307,6 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
 
 
