--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYCXEBSLW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){ dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-SZYCXEBSLW');
+  gtag('config', 'G-SZYCXEBSLW', {
+    'linker': {
+      'domains': [
+        'sindhuja11g.github.io',
+        'castle-trips.vercel.app'
+      ]
+    }
+  });
 </script>
     
     <meta charset="UTF-8" />
@@ -259,4 +266,5 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
 
