--- a/places.html
+++ b/places.html
@@ -5,11 +5,19 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYCXEBSLW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){ dataLayer.push(arguments); }
   gtag('js', new Date());
 
-  gtag('config', 'G-SZYCXEBSLW');
+  gtag('config', 'G-SZYCXEBSLW', {
+    'linker': {
+      'domains': [
+        'sindhuja11g.github.io',
+        'castle-trips.vercel.app'
+      ]
+    }
+  });
 </script>
+
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -307,6 +315,7 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
 
 
 
