--- a/places.html
+++ b/places.html
@@ -2,20 +2,6 @@
 <html lang="en">
 <head>
 
-<!-- GA4 WITH CROSS-DOMAIN LINKER -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYCXEBSLW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){ dataLayer.push(arguments); }
-  gtag('js', new Date());
-
-  gtag('config', 'G-SZYCXEBSLW', {
-    'linker': {
-      'domains': ['sindhuja11g.github.io', 'castle-trips.vercel.app']
-    },
-    'allow_linker': true
-  });
-</script>
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -91,7 +77,7 @@
     <a href="places.html">Places</a>
 
     <!-- THIS IS CORRECT: ANCHOR TAG ALLOWS LINK DECORATION (_gl) -->
-    <a href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a href="payment.html">Book Now</a>
   </nav>
 </header>
 
@@ -149,7 +135,7 @@
     <p>The original Disney park with classic rides and magic.</p>
 
     <!-- FIXED: MUST USE ANCHOR FOR LINK DECORATION -->
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -160,7 +146,7 @@
     <h2>Walt Disney World, Florida</h2>
     <p>Largest Disney destination in the world.</p>
 
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -171,7 +157,7 @@
     <h2>Disneyland Paris</h2>
     <p>Romantic European castle magic.</p>
 
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -182,7 +168,7 @@
     <h2>Tokyo Disney Resort</h2>
     <p>Amazing visuals + unique culture.</p>
 
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -193,7 +179,7 @@
     <h2>Hong Kong Disneyland</h2>
     <p>Colorful, Asian-inspired magic.</p>
 
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -204,7 +190,7 @@
     <h2>Shanghai Disney</h2>
     <p>World’s largest Disney castle.</p>
 
-    <a class="btn" href="https://castle-trips.vercel.app/payment.html">Book Now</a>
+    <a class="btn" href="payment.html">Book Now</a>
   </div>
 </div>
 
@@ -217,3 +203,4 @@
 
 </body>
 </html>
+
