--- a/thankyou.html
+++ b/thankyou.html
@@ -5,20 +5,12 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYCXEBSLW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){ dataLayer.push(arguments); }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-SZYCXEBSLW', {
-    'linker': {
-      'domains': [
-        'sindhuja11g.github.io',
-        'castle-trips.vercel.app'
-      ]
-    }
-  });
+  gtag('config', 'G-SZYCXEBSLW');
 </script>
 
-    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CastleTrips - Thank You</title>
@@ -105,5 +97,6 @@
     <footer>© 2025 CastleTrips | All Rights Reserved</footer>
   </body>
 </html>
+
 
 
